# inboxdna

./: .gitignore  LICENSE  README.md  build_exe.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  ci.yml
docs/: index.html
inboxdna/: __init__.py  __main__.py  app.py  auth.py  classifiers.py  client_secret_1075640521848-s11unelml0rtpqeosasnla2uc79dg9s2.apps.googleusercontent.com.json  db.py  paths.py
inboxdna/templates/: index.html
